--- a/video_face_swap.ipynb
+++ b/video_face_swap.ipynb
@@ -176,7 +176,9 @@
     "id": "8pz1h8EzwYFv"
    },
    "source": [
-    "> Mount Drive and give model path (download the inswapper_128.onnx model)"
+    "> Mount Drive and give model path\n",
+    "\n",
+    "> Download the model here https://huggingface.co/ezioruan/inswapper_128.onnx/resolve/main/inswapper_128.onnx"
    ]
   },
   {
